# SOFIRpy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readthedocs.yaml  readthedocs.yml  requirements.txt  setup.py  test_rdm.hdf5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_deploy_pages.yml  publish.yml  testing.yml  tests.yml
.gitlab/issue_templates/: bug.md  feature_proposal.md  task.md
Datasheets/: datasheet_210111_pump_wilo_Yonos-ECO-25-1-5-BMS.json  dymola_datasheet_210111_pipe_xxx_staticpipe.json  dymola_datasheet_210111_pump_wilo_Yonos-ECO-25-1-5-BMS.json  dymola_datasheet_210111_valve_xxx_somevalve.json
Datasheets/templates/: datasheet_YYMMDD_componentType_manufacturer_productName.json  dymola_datasheet_YYMMDD_componentType_manufacturer_productName.json
Projekt_460/Code/: Agent.py  FST.mplstyle  FST_colors.py  abstract_control.py  analyze.py  data_import_fmu_export.py  fair.py  fair_simulation.py  main.py  mas.py  simulate.py  utils_Agent_classes.py  utils_Data.py  utils_FMU.py  utils_MAS.py  utils_analyze.py  utils_dymolapy.py  utils_fluidsystem.py
Projekt_460/Fluid_model/: Hochhaus.mo
dlr guidelines/: requirements_class_1.md
docs/: conf.py  connect_systems.rst  contributing.rst  contribution.rst  fmu_export.rst  getting_started.rst  index.rst  installation.rst  limitations.rst  overview.rst  rdm.rst  release_notes.rst  simulation.rst  sofirpy_api.rst  user_guide.rst
docs/API Documentation/: fair_sim.fmu_export.dymola_fmu_export.rst  fair_sim.fmu_export.fmu_export.rst  fair_sim.fmu_export.open_modelica_fmu_export.rst  fair_sim.project.hdf5.rst  fair_sim.project.project_dir.rst  fair_sim.project.store_input_arguments.rst  fair_sim.rst  fair_sim.simulation.plot.rst  fair_sim.simulation.rst  fair_sim.simulation.simulation.rst  fair_sim.simulation.simulation_entity.rst  sofirpy.fmu_export.dymola_fmu_export.rst  sofirpy.fmu_export.fmu_export.rst  sofirpy.fmu_export.open_modelica_fmu_export.rst  sofirpy.fmu_export.rst  sofirpy.project.hdf5.rst  sofirpy.project.project.rst  sofirpy.project.project_dir.rst  sofirpy.project.rst  sofirpy.project.store_input_arguments.rst  sofirpy.rdm.rst  sofirpy.rdm.run.rst  sofirpy.rst  sofirpy.simulation.fmu.rst  sofirpy.simulation.plot.rst  sofirpy.simulation.rst  sofirpy.simulation.simulation.rst  sofirpy.simulation.simulation_entity.rst
docs/Images/: uml_diagram_simulation.wsd
docs/change_log/: v0.1.0.rst  v0.2.0.rst  v1.0.0.rst  v1.0.2.rst
docs/subpackages_doc/: fair_sim.fmu_export.rst  fair_sim.project.project.rst  fair_sim.project.rst  fair_sim.rst  fair_sim.simulation.fmu.rst  fair_sim.simulation.rst  fair_sim.simulation.simulate.rst
examples/: damper_datasheet.json  dc_motor_control.ipynb  discrete_pid.py
examples/fmu_export/: DC_Motor.fmu  export_script_DC_Motor_220306120208.mos  open_modelica_fmu_export.py
examples/fmu_export/dymola_model_export/: dymola_model_export_example.py  dymola_model_export_parameter_import_example.py
examples/fmu_export/open_modelica_model_export/: open_modelica_model_export_example.py
examples/motor_control/: DC_0Motor.fmu  DC_Motor.fmu  damper_datasheet.json  dc_motor_control.ipynb  discrete_pid.py  workflow.json  workflow_motor_control.ipynb
examples/project/: project_example.py
examples/rdm/: example_config.json  run_example.py  test_run_example.py
examples/rlc/: workflow.json
examples/simulating/: custom_simulation.py  simulation_example.py  test_simulation_example.py
examples/store_results/: example_project.hdf5  project_example.py
examples/workflow/: workflow_config.json  workflow_example.py
fair_sim/: __init__.py  discrete_pid.py  fmu_export.py  main.py  plot.py  project.py  read_hdf5_data.py  simulate.py  store_data.py  store_input_arguments.py  testting.py  utils.py  workflow.py
fair_sim/fmu_export/: __init__.py  dymola_export.py  dymola_fmu_export.py  export.py  fmu_export.py  open_modelica_export.py  open_modelica_fmu_export.py
fair_sim/project/: __init__.py  hdf5.py  plot.py  project.py  project_dir.py  store_input_arguments.py
fair_sim/simulation/: __init__.py  fmu.py  plot.py  simulate.py  simulation.py
protocol/: protocol.md
sofirpy/: utils.py
sofirpy/fmu_export/: dymola_fmu_export.py  fmu_export.py  open_modelica_fmu_export.py
sofirpy/project/: hdf5.py  project.py  project_dir.py  store_input_arguments.py
sofirpy/simulation/: fmu.py  simulation.py  simulation_entity.py  testrig.py
src/: FST.mplstyle  analyze.py  control.py  data_import_fmu_export.py  fair.py  fair_simulation.py  fmu_export.py  main.py  mas.py  plot.py  simulate.py  store_data.py  workflow.py
src/sofirpy/: __init__.py  common.py  utils.py
tests/: conftest.py  test_fmu_export.py  test_simulate.py
tests/fmu_export/: DC_Motor.mo  test_dymola_fmu_export.py  test_mos_script.mos  test_mos_script_default_settings.mos
tests/models/: nummer1.fmu  nummer1.mo  nummer2.fmu  test_control.py
tests/project/: project_testing_utils.py  test_hd5.py  test_hdf5.hdf5  test_hdf5.py  test_project.py  test_project_dir.py  test_store_input_arguments.py
tests/rdm/: test_config.json  test_hdf5.py  test_run.hdf5  test_run.py  test_store_input_arguments.py
tests/simulation/: DC_Motor_linux.fmu  DC_Motor_mac.fmu  DC_Motor_win.fmu  test_results.csv  test_results_dymola.csv  test_results_mac.csv  test_simulation.py
tests/test_data/: fmu_simulation_results.xlsx
tests/utils/: test_utils.py
(+51 files in other folders)
