[project]
name = "SOFIRpy"
version = "0.1.0"
description = "Framework for simulating FMUs and custom models written in python."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["simulation", "fmu"]
authors = [
    {email = "daniele.inturri@stud.tu-darmstadt.de"},
    {name = "Daniele Inturri"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "FMPy",
    "tqdm",
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "OMpython"
]
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-rtd-theme"
]
[project.urls]
homepage = "https://git.rwth-aachen.de/sofirpy/sofirpy"
documentation = "https://sofirpy.readthedocs.io"
repository = "https://git.rwth-aachen.de/sofirpy/sofirpy"
[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = [
    "fmpy",
    "fmpy.fmi2",
    "h5py",
    "matplotlib",
    "matplotlib.axes",
    "matplotlib.pyplot",
    "OMPython"
]
ignore_missing_imports = true
