[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sofirpy"
version = "0.1.0"
description = "Framework for simulating FMUs and custom models written in python."
readme = "README.md"
authors = [
    { name = "Daniele Inturri", email = "daniele.inturri@stud.tu-darmstadt.de" }
]
keywords = ["simulation", "fmu"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "FMPy>=0.3.0",
    "tqdm>=4.60.0",
    "h5py>=3.0.0",
    "matplotlib>=3.2.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "OMpython>=3.4.0",
    "typing_extensions>=4.3.0"
]
requires-python = ">=3.9"
[project.optional-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "mypy>=0.971",
    "pandas-stubs>=1.4.3.220822",
    "types-tqdm>=4.64.5",
    "types-pytz>=2022.2.1.0"
    ]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
repository = "https://git.rwth-aachen.de/sofirpy/sofirpy"
documentation = "https://sofirpy.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = [
    "fmpy",
    "fmpy.fmi2",
    "h5py",
    "matplotlib",
    "matplotlib.axes",
    "matplotlib.pyplot",
    "OMPython"
]
ignore_missing_imports = true
