[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sofirpy"
dynamic = ["version"]
description = "Framework for simulating FMUs and custom models written in python."
readme = "README.md"
authors = [
    { name = "Daniele Inturri", email = "daniele.inturri@stud.tu-darmstadt.de" },
]
keywords = ["simulation", "fmu"]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "FMPy>=0.3.0",
    "cloudpickle>=2.2.1",
    "tqdm>=4.60.0",
    "h5py>=3.0.0",
    "matplotlib>=3.2.0, < 3.8.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "OMpython>=3.4.0",
    "typing_extensions>=4.3.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "mypy>=1.5.1",
    "pandas-stubs>=1.4.3.220822",
    "syrupy>=4.5.0",
    "types-setuptools>=68.2.0.0",
    "types-tqdm>=4.64.5",
    "types-pytz>=2022.2.1.0",
]
dev = ["black>=22.12.0", "isort>=5.12.0", "pylint>=2.15.3", "pre-commit>=3.2.2"]
doc = ["sphinx>=5.1.1", "sphinx-rtd-theme>=1.0.0"]

[project.urls]
repository = "https://git.rwth-aachen.de/sofirpy/sofirpy"
documentation = "https://sofirpy.readthedocs.io/"

[tool.setuptools.dynamic]
version = { attr = "sofirpy.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sofirpy = ["py.typed"]

[tool.mypy]
strict = true
show_error_codes = true
[[tool.mypy.overrides]]
module = [
    "cloudpickle",
    "fmpy",
    "fmpy.fmi2",
    "fmpy.simulation",
    "h5py",
    "matplotlib",
    "matplotlib.axes",
    "matplotlib.pyplot",
    "matplotlib.colors",
    "matplotlib.figure",
    "matplotlib.table",
    "OMPython",
]
ignore_missing_imports = true

[tool.black]
line_length = 88

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pylint.main]
fail-under = 10

[tool.pylint.design]
max-args = 9

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "attribute-defined-outside-init",
    "logging-fstring-interpolation",
    "missing-function-docstring",
    "too-few-public-methods",
    "missing-class-docstring",

]
